ScatterChartItem: do not use item's position when resizing marker

The existing code was using current marker's coordinates when updating
its size, but that actually resulted in double offset, because later
we are explicitly calling setPos() on the marker.
Fix it by always using (0, 0) as an offset when calculating the
marker's rectangle.

Fixes: QTBUG-112904
Change-Id: I427cbd502f1637a7da71a7f2b23ccb0228ac3f01
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit edfcf8b309434e81eb602e2ca3e0d6c935f2c2eb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>